# prompt_and_control

./: app.py  gameboard.py  llm.py  pyproject.toml  transcript_manager.py  ui_display.py  voice.py
prompt_and_control.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
prompts/: system.py
