[project]
name = "prompt-and-control"
version = "0.1.0"
description = "Voice-controlled game using native Python speech recognition"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "SpeechRecognition>=3.10.0",
    "pyaudio>=0.2.11"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "voice"]
